[package]
name = "os"
version = "0.1.0"
authors = ["陈张萌 <2017013678@secoder.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# interrupt
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } #register lib
# memory
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator"} 
lazy_static = {version = "1.4.0", features = ["spin_no_std"] } # for memory


# panic 时直接终止，因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"